// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmationButton renders changes state on clicks and finally calls the onConfirmed prop 1`] = `
<div>
  <button
    class="sc-EHOje fjtPXW"
    data-testid="confirmation-button-initial"
  >
    <i
      class="sc-bZQynM hUkmUD sl-minus-circle"
    />
  </button>
</div>
`;

exports[`ConfirmationButton renders changes state on clicks and finally calls the onConfirmed prop 2`] = `
<div>
  <span>
    <button
      class="sc-EHOje fjtPXW"
      data-testid="confirmation-button-confirm"
    >
      <i
        class="sc-gzVnrw wVgSf sl-arrow-circle-right"
      />
    </button>
    <button
      class="sc-EHOje fjtPXW"
      data-testid="confirmation-button-cancel"
    >
      <i
        class="sc-htoDjs cSwGEq sl-delete-circle"
      />
    </button>
  </span>
</div>
`;

exports[`ConfirmationButton renders changes state on clicks and finally calls the onConfirmed prop 3`] = `
<div>
  <button
    class="sc-EHOje fjtPXW"
    data-testid="confirmation-button-initial"
  >
    <i
      class="sc-dnqmqq eQMmpD sl-minus-circle"
    />
  </button>
</div>
`;

exports[`ConfirmationButton renders changes state on clicks and finally calls the onConfirmed prop 4`] = `
<div>
  <button
    class="sc-EHOje fjtPXW"
    data-testid="confirmation-button-initial"
  >
    <i
      class="sc-gqjmRU leQUPa sl-minus-circle"
    />
  </button>
</div>
`;
